_sass/base.scss
html, body {
    background: url("#{$imagedir}/bg.gif");
    color: #c0c0c0;
    font-family: "Droid Sans", sans-serif;
    font-size: $fontsize;
}

a {
    text-decoration: none;
    color: inherit;
}

#navigation {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    padding: 1em 0;
    text-align: right;
    background: rgba(10,10,10,0.75);

    a {
        margin-right: 1.5em;
        font-size: 1.2em;

        &:hover {
            color: #ffffff;
        }
    }

    .home {
        float: left;
        margin-left: 1.5em;
    }
}

#bar {
    width: 100%;
    background: rgba(255,255,255,0.1);
    padding: 2em 0;
    color: #ffffff;
    margin: 10em 0 6em 0;

    .cont {
        width: $contentwidth;
        margin: auto;
        text-align: justify;

        .logo {
            float: left;
            display: block;
            width: 200px;
        }

        .column.right {
            margin-left: 250px;
        }

        h1 {
            font-weight: bold;
            font-size: 2em;
            margin-bottom: 0.8em;
        }

        p {
            margin-bottom: 1em;
            line-height: 1.3em;
        }

        #buttons {
            margin-top: 2em;
            text-align: center;
        }
    }
}

.container {
    width: $contentwidth;
    margin: auto;
    margin-top: 6em;
    margin-bottom: 4em;
    text-align: justify;

    &:after {
        content: " ";
        display: block;
        height: 0;
        clear: both;
        visibility: hidden;
    }

    .column.left {
        float: left;
        width: $leftcolumnwidth;
    }

    .column.right {
        margin-left: $leftcolumnwidth + $columnpadding;
    }

    $paragraphskip: 1em;

    h1 {
        font-size: 1.8em;
        font-weight: bold;
        color: #eeeeee;
        margin-top: 1.5 * $fontsize;
        margin-bottom: $fontsize;

        &:before {
            content: '';
            display: block;
            position: relative;
            width: 0;
            height: 5em;
            margin-top: -5em;
        }
    }

    h2 {
        @extend h1;
        font-size: 1.3em;
    }

    h3 {
        @extend h1;
        font-size: 1em;
        margin-bottom: 0.5 * $fontsize;
    }

    p {
        margin-bottom: $paragraphskip;
        line-height: 1.3em;
    }

    ul {
        list-style-type: disc;
        margin-left: 2.5em;
        margin-bottom: $paragraphskip;
    }

    ol {
        list-style-type: decimal;
        margin-left: 2.5em;
        margin-bottom: $paragraphskip;
    }

    li {
        margin-bottom: 0.5em;
    }

    a {
        color: #dd9324;

        &:hover { color: #7abf47; }
    }
}

.donate-btn {
    width: 180px;
    height: 90px;
    display: block;
    background-image: url("#{$imagedir}/donate_big.png");
    margin: auto;
}

.screenshots {
    text-align: justify;
    text-align-last: justify;

    &:after {
        content: "";
        display: inline-block;
        width: 100%;
    }

    img {
        width: 0.3 * ($contentwidth - $leftcolumnwidth - $columnpadding);
    }
}

.socialmedia {
    text-align: center;
    margin-bottom: 2em;

    a {
        margin: 0 0.5em;
        display: inline-block;
        width: 48px;
        height: 48px;
    }

    .facebook {
        background: url("#{$imagedir}/socialmedia/facebook.png");
        &:hover { background: url("#{$imagedir}/socialmedia/facebook_hover.png"); }
    }

    .googleplus {
        background: url("#{$imagedir}/socialmedia/googleplus.png");
        &:hover { background: url("#{$imagedir}/socialmedia/googleplus_hover.png"); }
    }

    .twitter {
        background: url("#{$imagedir}/socialmedia/twitter.png");
        &:hover { background: url("#{$imagedir}/socialmedia/twitter_hover.png"); }
    }
}

.status {
    position: fixed;
    left: 0;
    width: 90%;
    height: 100%;
    margin: 6em;
}

.warning {
    @extend .container;
    width: 0.7 * $contentwidth;
    margin: 6em auto;
    padding: 2em;
    border: 3px solid rgba(128,0,0,0.3);
    border-radius: 0.8em;
    background: rgba(128,0,0,0.1);
    color: white;

    h1 {
        text-align: center;
        margin: 0;
        margin-bottom: 0.8em;
        font-size: 1.5em;
    }

    p:last-child {
        margin-bottom: 0;
    }
}

.faqnavigation {
    list-style-type: none !important;
    margin-left: 0 !important;
    color: white;
    font-weight: bold;
    line-height: 2em;
    background: rgba(0,0,0,0.3);
    border-radius: 0.7em;
    padding: 1em 2em;

    ul {
        list-style-type: none;
        margin-left: 2em;
    }

    ul li {
        margin-bottom: 0;
        font-weight: normal;
        line-height: 1em;
    }
}

.faqitem {
    background: rgba(0,0,0,0.3);
    border: 1px solid rgba(100,100,100,0.3);
    padding: 0.5em 2em;
    font-size: 0.9em;
    margin-bottom: 2em;

    h3 {
        margin-top: 0.5em;
        margin-bottom: 1em;
        font-size: 1.3em;

        &:before {
            content: '';
            display: block;
            position: relative;
            width: 0;
            height: 5em;
            margin-top: -5em;
        }
    }
}

.openhub {
    text-align: center;

    iframe {
        background: #eeeeee;
        height: 190px !important;
        width: 330px !important;
    }
}

